# django-celery

./: .todo  Dockerfile  README.md  docker-compose.yml  pyproject.toml  todo.md
app/: models.py  serializers.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py
bean/: apps.py  models.py  serializers.py  urls.py  views.py
bean/migrations/: 0002_auto_20221017_1509.py
core/: celery.py  settings.py  urls.py
tests/: test_django_celery.py
