[tool.poetry]
name = "django-celery"
version = "0.1.0"
description = ""
authors = ["muhtasim1 <muhtasim@greentomatomedia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangoadmin = "^2.2.8"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
